--- a/Views/Home/AdminPanel.cshtml
+++ b/Views/Home/AdminPanel.cshtml
@@ -4,21 +4,66 @@
 }
 
 <h1>Торговый автомат</h1>
-
-
-<div class="row row=cols-1 row-cols-md-3 g-4">
-    @{ foreach (var item in Model)
-        {
-            <div class="col">
-                <div class="card text-center" style="width: 18rem;">
-                    <img src="../images/128.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">@item.Name</h5>
-                        <p class="card-text"> Доступно: @item.Count шт.</p>
-                        <button class="btn btn-outline-warning">Редактировать</button>
+<div class="card">
+    <div class="card-body">
+        <h5 class="card-title">Доступные монеты</h5>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1" checked>
+            <label class="form-check-label" for="inlineCheckbox1">1 р.</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2" checked>
+            <label class="form-check-label" for="inlineCheckbox2">2 р.</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" checked>
+            <label class="form-check-label" for="inlineCheckbox3">5 р.</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4" checked>
+            <label class="form-check-label" for="inlineCheckbox4">10 р.</label>
+        </div>
+    </div>
+</div>
+    <div class="row row=cols-1 row-cols-md-3 g-4 mt-3">
+        @{ foreach (var item in Model)
+            {
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">@item.Name</h5>
+                            <p class="card-text"> Доступно: @item.Count шт.</p>
+                            <p class="card-text"> Цена: @item.Price шт.</p>
+                            <button class="btn btn-outline-warning">Обновить</button>
+                            <button class="btn btn-outline-danger">Удалить</button>
+                        </div>
                     </div>
                 </div>
-            </div>
+            }
         }
-    }
-</div>
+    <div class="col">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Новый напиток</h5>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="input1">Название</span>
+                    <input type="text" class="form-control" id="input-name" aria-describedby="input1" required>
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="input2">Цена</span>
+                    <input type="number" class="form-control" id="input-name" aria-describedby="input2" required>
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="input3">Количество</span>
+                    <input type="number" class="form-control" id="input-name" aria-describedby="input3" required>
+                </div>
+                <div class="input-group mb-3">
+                    <label for="input4">Изображение</label>
+                    <input type="file" id="input4">
+                </div>
+
+                <button class="btn btn-outline-warning">Добавить</button>
+            </div>
+        </div>
+    </div>
+    </div>
