--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,13 +18,13 @@
 <div class="row row=cols-1 row-cols-md-3 g-4 mt-3">
     @{ foreach (var item in Model)
         {
-            <div class="col">
+            <div class="col mt-3">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="../images/128.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">@item.Name</h5>
                         <p class="card-text" id="count-@item.Id"> Доступно: @item.Count шт.</p>
-                        <button class="btn btn-primary" disabled="@(!item.Available)" id="button-@item.Id">@item.Price р.</button>
+                        <button class="btn btn-primary" disabled=@(!item.Available) id="button-@item.Id">@item.Price р.</button>
                     </div>
                 </div>
             </div>
@@ -35,11 +35,10 @@
                             url: '/Home/BuyDrink',
                             data: { drink_id: @item.Id },
                             success: function (data) {
-                                if (@(!item.Available)) {
-                                    $("#button-@item.Id").prop('disabled', 'true');
-
+                                if (data.Available) {
+                                    $("#button-@item.Id").prop('disabled', false);
                                 } else {
-                                    $("#button-@item.Id").prop('disabled', 'false');
+                                    $("#button-@item.Id").prop('disabled', true);
                                 }
                                 $("#count-@item.Id").text(`Доступно: ${data.Count} шт.`);
                             }
