--- a/Views/Home/AdminPanel.cshtml
+++ b/Views/Home/AdminPanel.cshtml
@@ -25,65 +25,72 @@
         </div>
     </div>
 </div>
-    <div class="row row=cols-1 row-cols-md-3 g-4 mt-3">
-        @{ foreach (var item in Model)
-            {
-                <div class="col mb-3">
-                    <div class="card" style="width: 18rem;">
-                                <div class="card-body">
-                                    <h5 class="card-title">Напиток ID @item.Id</h5>
-                                    <div class="input-group mb-3">
-                                        <span class="input-group-text" id="input1">Название</span>
-                                        <input type="text" class="form-control" id="name-@item.Id" value=@item.Name aria-describedby="input1" required>
-                                    </div>
-                                    <div class="input-group mb-3">
-                                        <span class="input-group-text" id="input2">Цена</span>
-                                        <input type="number" class="form-control" id="price-@item.Id" value=@item.Price aria-describedby="input2" required>
-                                    </div>
-                                    <div class="input-group mb-3">
-                                        <span class="input-group-text" id="input3">Количество</span>
-                                        <input type="number" class="form-control" id="count-@item.Id" value=@item.Count aria-describedby="input3" required>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox" id="available-@item.Id" value="option1" checked>
-                                        <label class="form-check-label" for="available-@item.Id">Напиток доступен</label>
-                                    </div>
-                                    <div class="input-group mb-3">
-                                        <label for="input4">Изображение</label>
-                                        <input type="file" id="image-@item.Id">
-                                    </div>
-                                    <button class="btn btn-warning" id="update-@item.Id">Обновить</button>
-                                    <button class="btn btn-danger">Удалить</button>
-                                    <script>
-                                        $("#update-@item.Id").click(function () {
-                                            var image = new FormData();
-                                            image.append("file", $("#image-@item.Id").prop('files')[0])
-                                            $.ajax({
-                                                method: 'POST',
-                                                url: '/Home/UpdateDrinkImage',
-                                                data: image
-                                            })
-                                            $.ajax({
-                                                method: 'POST',
-                                                url: '/Home/UpdateDrink',
-                                                data: {
-                                                    drink_id: @item.Id,
-                                                    new_name: $("#name-@item.Id").val(),
-                                                    new_price: $("#price-@item.Id").val(),
-                                                    new_count: $("#count-@item.Id").val(),
-                                                    new_available: $("#available-@item.Id").is(":checked")
-                                                },
-                                                success: function (data) {
-
-                                                }
-                                            })
-                                        })
-                                    </script>
-                                </div>
+<div class="row row=cols-1 row-cols-md-3 g-4 mt-3">
+    @{ foreach (var item in Model)
+        {
+            <div class="col mb-3">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Напиток ID @item.Id</h5>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="input1">Название</span>
+                            <input type="text" class="form-control" id="name-@item.Id" value=@item.Name aria-describedby="input1" required>
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="input2">Цена</span>
+                            <input type="number" class="form-control" id="price-@item.Id" value=@item.Price aria-describedby="input2" required>
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="input3">Количество</span>
+                            <input type="number" class="form-control" id="count-@item.Id" value=@item.Count aria-describedby="input3" required>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" id="available-@item.Id" checked=@item.Available>
+                            <label class="form-check-label" for="available-@item.Id">Напиток доступен</label>
+                        </div>
+                        <div class="input-group mb-3">
+                            <label for="input4">Изображение</label>
+                            <input type="file" id="image-@item.Id">
+                        </div>
+                        <button class="btn btn-warning" id="update-@item.Id">Обновить</button>
+                        <button class="btn btn-danger">Удалить</button>
+                        <script>
+                            $("#update-@item.Id").click(function () {
+                                $("#update-@item.Id").attr("disabled", true)
+                                $.ajax({
+                                    method: 'POST',
+                                    url: '/Home/UpdateDrink',
+                                    data: {
+                                        drink_id: @item.Id,
+                                        new_name: $("#name-@item.Id").val(),
+                                        new_price: $("#price-@item.Id").val(),
+                                        new_count: $("#count-@item.Id").val(),
+                                        new_available: $("#available-@item.Id").is(":checked")
+                                    },
+                                    success: function (data) {
+                                        $("#update-@item.Id").removeAttr("disabled")
+                                        $(".toast").toast("show")
+                                    }
+                                })
+                                if ($("#image-@item.Id").prop('files')[0]) {
+                                    var image = new FormData();
+                                    image.append("file", $("#image-@item.Id").prop('files')[0])
+                                    $.ajax({
+                                        method: 'POST',
+                                        url: '/Home/UpdateDrinkImage',
+                                        data: image,
+                                        dataType: 'json',
+                                        contentType: false,
+                                        processData: false
+                                    })
+                                }
+                            })
+                        </script>
                     </div>
                 </div>
-            }
+            </div>
         }
+    }
     <div class="col">
         <div class="card" style="width: 18rem;">
             <div class="card-body">
@@ -113,4 +120,14 @@
             </div>
         </div>
     </div>
+</div>
+
+<div style="position: absolute; bottom: 10px; left: 10px;">
+    <div class="toast align-items-center text-white bg-primary border-0" role="alert" data-delay=500 aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+            <div class="toast-body">
+                Данные успешно обновлены
+            </div>
+        </div>
     </div>
+</div>
