--- a/Views/Home/AdminPanel.cshtml
+++ b/Views/Home/AdminPanel.cshtml
@@ -7,25 +7,124 @@
 <div class="card">
     <div class="card-body">
         <h5 class="card-title">Доступные монеты</h5>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1" checked>
-            <label class="form-check-label" for="inlineCheckbox1">1 р.</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2" checked>
-            <label class="form-check-label" for="inlineCheckbox2">2 р.</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" checked>
-            <label class="form-check-label" for="inlineCheckbox3">5 р.</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4" checked>
-            <label class="form-check-label" for="inlineCheckbox4">10 р.</label>
-        </div>
+        @{ foreach (var item in ViewBag.Coin)
+            {
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="checkbox-@item.Nomination" checked=@item.Available>
+                    <label class="form-check-label" for="checkbox-@item.Nomination">@item.Nomination р.</label>
+                </div>
+                <script>
+                    $('#checkbox-@item.Nomination').change(function () {
+                        console.log(this.checked)
+                    })
+                </script>
+            } 
+        }
     </div>
 </div>
-<div class="row row=cols-1 row-cols-md-3 g-4 mt-3">
+<div class="row row=cols-1 row-cols-md-3 g-4 mt-3" id="drinks">
+    <div class="col">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Новый напиток</h5>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="input1">Название</span>
+                    <input type="text" class="form-control" id="input-name" aria-describedby="input1" required>
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="input2">Цена</span>
+                    <input type="number" class="form-control" id="input-price" aria-describedby="input2" required>
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="input3">Количество</span>
+                    <input type="number" class="form-control" id="input-count" aria-describedby="input3" required>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="checkbox-available" checked>
+                    <label class="form-check-label" for="inlineCheckbox1">Напиток доступен</label>
+                </div>
+
+                <button class="btn btn-warning" id="add-drink">Добавить</button>
+                <script>
+                    $("#add-drink").click(function () {
+                        $.ajax({
+                            method: 'POST',
+                            url: '/Home/AddDrink',
+                            data: {
+                                new_name: $("#input-name").val(),
+                                new_price: $("#input-price").val(),
+                                new_count: $("#input-count").val(),
+                                new_available: $("#checkbox-available").is(":checked")
+                            },
+                            success: function (data) {
+                                $("#drinks").append(`<div class="col mb-3" id="card-${data.Id}">
+                                                <div class="card" style="width: 18rem;">
+                                                    <div class="card-body">
+                                                        <h5 class="card-title">Напиток ID ${data.Id}</h5>
+                                                        <div class="input-group mb-3">
+                                                            <span class="input-group-text" id="input-${data.Id - 1}">Название</span>
+                                                            <input type="text" class="form-control" id="name-${data.Id}" value=${data.Name} aria-describedby="input1" required>
+                                                        </div>
+                                                        <div class="input-group mb-3">
+                                                            <span class="input-group-text" id="input-${data.Id - 2}">Цена</span>
+                                                            <input type="number" class="form-control" id="price-${data.Id}" value=${data.Price} aria-describedby="input2" required>
+                                                        </div>
+                                                        <div class="input-group mb-3">
+                                                            <span class="input-group-text" id="input-${data.Id - 3}">Количество</span>
+                                                            <input type="number" class="form-control" id="count-${data.Id}" value=${data.Count} aria-describedby="input3" required>
+                                                        </div>
+                                                        <div class="form-check form-check-inline">
+                                                            <input class="form-check-input" type="checkbox" id="available-${data.Id}" checked=${data.Available}>
+                                                            <label class="form-check-label" for="available-${data.Id}">Напиток доступен</label>
+                                                        </div>
+                                                        <button class="btn btn-warning" id="update-${data.Id}">Обновить</button>
+                                                        <button class="btn btn-danger" id="delete-${data.Id}">Удалить</button>
+                                                        <script>
+                                                            $("#delete-${data.Id}").click(function () {
+                                                                $.ajax({
+                                                                    method: 'POST',
+                                                                    url: '/Home/DeleteDrink',
+                                                                    data: {
+                                                                        drink_id: ${data.Id}
+                                                                    },
+                                                                    beforeSend: function () {
+                                                                        return confirm("Вы действительно хотите удалить напиток?");
+                                                                    },
+                                                                    success: function (data) {
+                                                                        $("#card-${data.Id}").remove()
+                                                                    }
+                                                                })
+                                                            })
+                                                            $("#update-${data.Id}").click(function () {
+                                                                $("#update-${data.Id}").attr("disabled", true)
+
+                                                                $.ajax({
+                                                                    method: 'POST',
+                                                                    url: '/Home/UpdateDrink',
+                                                                    data: {
+                                                                        drink_id: ${data.Id},
+                                                                        new_name: $("#name-${data.Id}").val(),
+                                                                        new_price: $("#price-${data.Id}").val(),
+                                                                        new_count: $("#count-${data.Id}").val(),
+                                                                        new_available: $("#available-${data.Id}").is(":checked")
+                                                                    },
+                                                                    success: function (data) {
+                                                                        $("#update-${data.Id}").removeAttr("disabled")
+                                                                        $(".toast").toast("show")
+                                                                    }
+                                                                })
+                                                            })
+                                                    <\/script>
+                                                </div>
+                                            </div>
+                                        </div>`)
+                            }
+                        })
+                    })
+                </script>
+            </div>
+        </div>
+    </div>
     @{ foreach (var item in ViewBag.Drink)
         {
             <div class="col mb-3" id="card-@item.Id">
@@ -58,6 +157,9 @@
                                     data: {
                                         drink_id: @item.Id
                                     },
+                                    beforeSend: function () {
+                                        return confirm("Вы действительно хотите удалить напиток?");
+                                    },
                                     success: function (data) {
                                         $("#card-@item.Id").remove()
                                     }
@@ -88,32 +190,7 @@
             </div>
         }
     }
-    <div class="col">
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title">Новый напиток</h5>
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="input1">Название</span>
-                    <input type="text" class="form-control" id="input-name" aria-describedby="input1" required>
-                </div>
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="input2">Цена</span>
-                    <input type="number" class="form-control" id="input-name" aria-describedby="input2" required>
-                </div>
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="input3">Количество</span>
-                    <input type="number" class="form-control" id="input-name" aria-describedby="input3" required>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1" checked>
-                    <label class="form-check-label" for="inlineCheckbox1">Напиток доступен</label>
-                </div>
 
-                <button class="btn btn-warning">Добавить</button>
-
-            </div>
-        </div>
-    </div>
 </div>
 
 <div style="position: absolute; bottom: 10px; left: 10px;">
